second hw (third) commit